--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>Proiect la facultate :D {{title}}</h1>
+<app-nav-bar></app-nav-bar>
+
+<div class="container" style="margin-top: 100px;">
+    <h1>Proiect la facultate :D {{title}}</h1>
+    <br>
+    <ul>
+        <li class="list-unstyled" *ngFor="let product of products">
+            {{product.name}}
+        </li>
+    </ul>
+</div>
