--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid fixed-top" style="background-color: #FFFFFF">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 px-3  border-bottom">
-      <a href="/" class="d-flex align-items-center  mb-2 mb-md-0 text-dark text-decoration-none  fs-2">
+      <a routerLink="/" class="d-flex align-items-center  mb-2 mb-md-0 text-dark text-decoration-none  fs-2">
         BikeShop
       </a>
 
       
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0" style="margin-left: 5em;">
-        <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Shop</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Contact</a></li>
+        <li><a [routerLink]="['/']"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link px-2 ">Home</a></li>
+        <li><a routerLink="/shop"   routerLinkActive="active" class="nav-link px-2 ">Shop</a></li>
+        <li><a href="#" class="nav-link px-2 "  routerLinkActive="active" >Contact</a></li>
         
       </ul>
 
