--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -2,14 +2,14 @@
     <div class="card shadow-sm">
       <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="image-fluid bg-light">
       <div class="card-body" >
-        <a href="#">
+        <a routerLink='/shop/{{product.id}}' >
             <h6 class="text-uppercase">{{product.productBrand}} {{product.name}}</h6>
         </a>
         <span class="me-2">{{product.price | currency}}</span>
         <p class="card-text" >&nbsp;&nbsp;{{product.description}}</p>
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+            <button type="button" routerLink='/shop/{{product.id}}' class="btn btn-sm btn-outline-secondary">View</button>
             <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart px-2"></button>
             
           </div>
